Joystick added and borders

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <div class="Joystick">
+
+    </div>
     <div class="ButtonSpace">
         <div class="A">A</div>
         <div class="B">B</div>
